--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install .
-        coverage run --branch --source=thuban/ -m pytest thuban -m "not slow"
+        coverage run --branch --source=thuban/ -m pytest tests -m "not slow"
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
