--- a/.github/workflows/ci_fixed.yaml
+++ b/.github/workflows/ci_fixed.yaml
@@ -36,7 +36,7 @@ jobs:
         pip install ".[test]"
     - name: Test with pytest
       run: |
-        coverage run -m pytest
+        coverage run --branch --source=thuban/ -m pytest tests -m "not slow"
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       env:
