--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = ["numpy",
     "astropy",
     "matplotlib",
     "pandas",
-    "sep-pjw",
+    "sep",
     "scipy",
     "scikit-learn",
     "lmfit",
